--- a/AULA_02_HTML/desafio/bolo-de-cenoura.html
+++ b/AULA_02_HTML/desafio/bolo-de-cenoura.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bolo de Cenoura</title>
+    <title>Bolo de Cenoura</title>       
 </head>
-<body>
+    <!-- Cabeçalho -->
+<body style="background-color: rgb(209, 234, 226);">
+    <div style="background-image: url(Imagens/cake-with-chocolate-topping-cinnamon-sticks\ \(1\).jpg); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;padding: 15px;text-align: center;">        
+    <h1 class="display-4" style="color: rgb(188, 254, 222); text-align: center;font-size: 100px;-webkit-text-stroke-width: 1px; -webkit-text-stroke-color: rgb(35, 51, 46);">Receitas de Bolos</h1>    
+    </div>
     <a href="index.html">Voltar</a>
-    <h2>Bolo de Cenoura</h2>
-    <img src="Imagens/bolo-de-cenoura-fofinho.jpg" width="200px"/>
-    <br>
+    <h2 style="text-align: center;">Bolo de Cenoura</h2>
+    </div>
+    <div style="text-align: center;"><img src="Imagens/bolo-de-cenoura-fofinho.jpg" width="200px"/></div>
+    <br>    
     <p>
         Confira essa clássica receita de bolo de cenoura simples e fácil, nossa campeã de acessos! O bolo de cenoura é um doce muito popular em nosso país, especialmente no café da manhã e no lanche da tarde. Com sua cobertura de chocolate irresistível e seu interior macio e úmido, ela é uma receita que conquista o coração de todos! Veja com a gente como fazer bolo de cenoura, uma receita prática, preparada com auxílio do liquidificador e perfeita para degustar com um cafezinho!
     </p>
