--- a/AULA_02_HTML/desafio/bolo-de-chocolate.html
+++ b/AULA_02_HTML/desafio/bolo-de-chocolate.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bolo de Chocolate</title>
 </head>
-<body>
+    <!-- Cabeçalho -->
+<body style="background-color: rgb(209, 234, 226);">
+    <div style="background-image: url(Imagens/cake-with-chocolate-topping-cinnamon-sticks\ \(1\).jpg); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;padding: 15px;text-align: center;">        
+    <h1 class="display-4" style="color: rgb(188, 254, 222); text-align: center;font-size: 100px;-webkit-text-stroke-width: 1px; -webkit-text-stroke-color: rgb(35, 51, 46);">Receitas de Bolos</h1>    
+    </div>
     <a href="index.html">Voltar</a>
-    <h2>Bolo de Chocolate</h2>
-    <img src="Imagens/bolo-de-chocolate-facil-e-barato-rspxk8nc.jpg" width="200px"/>
+    <h2 style="text-align: center;-webkit-text-stroke-width: 1px; -webkit-text-stroke-color: rgb(35, 51, 46);">Bolo de Chocolate</h2>
+    <div style="text-align: center;"><img src="Imagens/bolo-de-chocolate-facil-e-barato-rspxk8nc.jpg" width="200px"/></div>
     <br>
     <p>
         Um bolo de chocolate fofinho, rápido e simples de fazer junto com uma xícara de café às vezes é tudo que a gente precisa para curar onde dói em uma tarde chuvosa. Essa receita é prática e não precisa de batedeira, sendo feita no liquidificador. Para garantir que o bolo de chocolate cresça e fique macio como a gente gosta, é importante que a gente respeite o tempo de bater a massa no eletrodoméstico indicado na receita. Isso permite que as fibras da farinha criem a trama que segura as bolhas criadas pelo fermento e que garantem o crescimento do bolo. A calda de calda de chocolate cobre o bolo finalizando tudo e deixando ainda mais delicioso. Se você quiser completar, pode adicionar chocolate granulado ao topo para o bolo ficar bem "chocolatudo". Não esqueça de untar a forma para que o bolo saia por inteiro e depois de 40 minutos, você terá o melhor bolo de chocolate saindo do seu forno.  
