--- a/AULA_02_HTML/desafio/bolo-laranja.html
+++ b/AULA_02_HTML/desafio/bolo-laranja.html
@@ -5,16 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+    <!-- Cabeçalho -->
+<body style="background-color: rgb(209, 234, 226);">
+    <div style="background-image: url(Imagens/cake-with-chocolate-topping-cinnamon-sticks\ \(1\).jpg); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;padding: 15px;text-align: center;">        
+    <h1 class="display-4" style="color: rgb(188, 254, 222); text-align: center;font-size: 100px;-webkit-text-stroke-width: 1px; -webkit-text-stroke-color: rgb(35, 51, 46);">Receitas de Bolos</h1>    
+    </div>    
     <a href="index.html">Voltar</a>
-    <h3>Bolo de Laranja</h3>
-    Image do bolo-laranja
+    <!-- Conteúdo -->
+    <h2 style="text-align: center;">Bolo de Laranja</h2>
+    <div style="text-align: center;"><img src="Imagens/bolo de laranja.jpg" alt="Bolo de Laranja"></div>
     <br>
-    Aqui deve conter a descrição do bolo-laranja
-    <br>
-    Lista de Ingredientes do bolo-laranja ul li
-    <br>
-    Modo de Preparo ol li
-    <br>
+    <p>
+        Fazer um bolo de laranja delicioso é uma maneira maravilhosa de surpreender a família com um lanche saboroso. Esta receita simples e prática promete conquistar o paladar de todos com seu aroma cítrico e sabor inconfundível. Os ingredientes necessários para este bolo são ovos, açúcar, óleo, suco e casca de laranja, farinha de trigo e fermento em pó. O processo de preparo é bem simples, e o resultado é um bolo de laranja macio, perfumado e com uma textura leve e saborosa. Esta receita não apenas é simples de fazer, mas também é uma garantia de sucesso, proporcionando um momento especial durante o lanche ou café da tarde. Aproveite cada fatia desse bolo de laranja e desfrute da sensação única que ele oferece.  
+    </p>
+    <h2>Lista de Ingredientes</h2>
+    <h3>Massa</h3>
+    <ul>
+        <li>4 ovos</li>
+        <li>Suco de 2 laranjas</li>
+        <li>1 xicara de óleo</li>
+        <li>Casca de 1 laranja</li>
+        <li>2 xícaras (chá) de açúcar</li>
+        <li>1 colher (sopa) de fermento em pó</li>
+    </ul>    
+    <h2>Modo de Preparo</h2>
+    <ol type="1" start="1">
+        <li>Bata no liquidificador os ovos, o açúcar, o óleo, o suco e a casca da laranja.</li>
+        <li>Passe para uma tigela e acrescente a farinha de trigo e o fermento.</li>
+        <li>Leve para assar em uma forma com furo central, untada e enfarinhada, por mais ou menos 30 minutos.</li>
+        <li>Desenforme o bolo e molhe com suco de laranja.</li>        
+    </ol>    
 </body>
 </html>
